scripts/kubernetes/bassa-api.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: bassa-api
  labels:
    run: bassa-api
spec:
  selector:
    matchLabels:
      run: bassa-api
  template:
    metadata:
      labels:
        run: bassa-api
    spec:
      containers:
      - name: bassa-api
        image: scoreucsc/bassa
        ports:
        - containerPort: 5000
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: bassa-api
  labels:
    run: bassa-api
spec:
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    run: bassa-api
  type: NodePort
