scripts/kubernetes/bassa-ui.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: bassa-ui
  labels:
    run: bassa-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      run: bassa-ui
  template:
    metadata:
      labels:
        run: bassa-ui
    spec:
      containers:
      - name: bassa-ui
        image: scoreucsc/bassa-ui
        ports:
        - containerPort: 80
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: bassa-ui
  labels:
    run: bassa-ui
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    run: bassa-ui
  type: NodePort
